<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/wizardFragment"
        android:name="org.spsl.evtracker.ui.wizard.WizardFragment"
        android:label="Setup">
        <argument
            android:name="hideBottomNav"
            app:argType="boolean"
            android:defaultValue="true"/>
        <action
            android:id="@+id/action_wizard_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/wizardFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="org.spsl.evtracker.ui.dashboard.DashboardFragment"
        android:label="Dashboard">
        <action
            android:id="@+id/action_dashboard_to_chargeEdit"
            app:destination="@id/chargeEditFragment"/>
        <action
            android:id="@+id/action_dashboard_to_cars"
            app:destination="@id/carsFragment"/>
    </fragment>

    <fragment
        android:id="@+id/chargeEditFragment"
        android:name="org.spsl.evtracker.ui.chargeedit.ChargeEditFragment"
        android:label="Charge">
        <argument
            android:name="eventId"
            app:argType="long"
            android:defaultValue="-1L"/>
        <argument
            android:name="hideBottomNav"
            app:argType="boolean"
            android:defaultValue="true"/>
    </fragment>

    <fragment
        android:id="@+id/carsFragment"
        android:name="org.spsl.evtracker.ui.cars.CarsFragment"
        android:label="Cars">
        <argument
            android:name="hideBottomNav"
            app:argType="boolean"
            android:defaultValue="true"/>
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="org.spsl.evtracker.ui.settings.SettingsFragment"
        android:label="Settings">
        <action
            android:id="@+id/action_settings_to_manage_locations"
            app:destination="@id/manageLocationsFragment"/>
        <action
            android:id="@+id/action_settings_to_wizard"
            app:destination="@id/wizardFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/aboutFragment"/>
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.spsl.evtracker.ui.about.AboutFragment"
        android:label="@string/about_title">
        <argument
            android:name="hideBottomNav"
            app:argType="boolean"
            android:defaultValue="true"/>
    </fragment>

    <fragment
        android:id="@+id/chartsFragment"
        android:name="org.spsl.evtracker.ui.charts.ChartsFragment"
        android:label="Charts">
        <action
            android:id="@+id/action_charts_to_cars"
            app:destination="@id/carsFragment"/>
        <action
            android:id="@+id/action_charts_to_chargeEdit"
            app:destination="@id/chargeEditFragment"/>
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="org.spsl.evtracker.ui.history.HistoryFragment"
        android:label="History">
        <action
            android:id="@+id/action_history_to_chargeEdit"
            app:destination="@id/chargeEditFragment"/>
    </fragment>

    <fragment
        android:id="@+id/manageLocationsFragment"
        android:name="org.spsl.evtracker.ui.locations.ManageLocationsFragment"
        android:label="Manage Locations">
        <argument
            android:name="hideBottomNav"
            app:argType="boolean"
            android:defaultValue="true"/>
    </fragment>

</navigation>
